--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "@babel/runtime": "7.12.13",
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/react": "16.14.4",
     "@types/react-dom": "16.9.11",
-    "prop-types": "^15.7.2",
+    "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router": "5.2.0",
